styles.css
* {
  box-sizing: border-box;
}

:root {
  --main-text-color: rgb(0, 1, 18);
  --subheading-grey-color: rgb(130, 143, 163);
  --border-grey-color: rgb(228, 235, 250);
  --main-theme-color: rgb(99, 95, 199);
  --background-white-color: #fff;
  --background-offwhite-color: rgb(244, 247, 253);
  --todo-dot-color: #49c4e5;
  --doing-dot-color: #8471f2;
  --light-purple-color:  rgb(168, 164, 255);
  --done-dot-color: #67e2ae;
  --delete-btn-red: rgb(234, 85, 85);
}

body {
  font-family: "Plus Jakarta Sans", sans-serif;
  color: var(--main-text-color);
  font-size: 15px;
  font-weight: bold;
  margin: 0;
  display: flex; /*layout to span horizontally*/
  width: 100%;
  height: 100vh;
  background: var(--background-offwhite-color);
}

#loadingElement {
  position: fixed;
}

.nav-all-boards,
.todo-title,
.doing-title,
.done-title {
  font-size: 12px;
  letter-spacing: 2.4px;
  color: var(--subheading-grey-color);
  text-transform: uppercase;
}


/* =========== Nav Section =========== */
.side-nav-bar {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  width: 300px; /*Side-nav-bar gets a fixed width*/
  height: 100vh;
  overflow-y: auto; 
  border-right: 1px solid var(--border-grey-color); /*Grey divider between side-nav-bar and main-container */
  background-color: var(--background-white-color);
}

.nav-logo-div {
  margin: 30px 113px 54px 34px; /* Space around kanban logo */
}

.nav-logo {
  width: 100%;
}

.nav-boards-div {
  display: flex;
  flex-direction: column;
}

.nav-all-boards {
  padding: 0 12px 0 40px; /*Space around all boards title*/
}

.nav-toggle {
  font-family: inherit;
  font-weight: bold;
  border: none;
  font-size: 15px;
  color: var(--background-white-color);
  display: flex;
  align-items: center; /*align launch title and toggle*/
  padding: 28px 12px 28px 40px; /*Space around launch title to align with All-boards title*/
  width: 276px;
  height: 48px;
  background: var(--main-theme-color);
  border-top-right-radius: 100px;
  border-bottom-right-radius: 100px;
  cursor: pointer;
}

/*** Nav-bar interaction ***/
.nav-features-div {
  display: flex;
  flex-direction: column;
  gap: 15px;
  position: relative;
}

/* Theme-toggle */
.nav-theme-toggle-div {
  background: var(--background-offwhite-color);
  width: 250px;
  height: 48px;
  display: flex;
  align-items: center;
  justify-content: space-around;
  margin-right: 20px;
  margin-left: 20px;
  border-radius: 6px;
}

.nav-theme-toggle {
  -webkit-appearance: none; /* hide the default checkbox */
  position: relative; /* for circle inside toggle to be positioned relative to toggle*/
  width: 40px;
  height: 20px;
  border-radius: 25px;
  margin-top: 8px;
  background-color: var(--main-theme-color);
  cursor: pointer;
}

.nav-theme-toggle::after {
  content: "";
  background-color: var(--background-white-color);
  position: absolute;
  top: 50%;
  left: 30%;
  height: 14px;
  width: 14px;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  transition: left .3s;
}

.nav-theme-toggle:checked {
  background-color: var(--light-purple-color);
}

.nav-theme-toggle:checked::after {
  left: 70%;
}

/* Show Sidebar */
.nav-eyes {
  background-color: var(--light-purple-color);
  width: 56px;
  height: 48px;
  border-top-right-radius: 100px;
  border-bottom-right-radius: 100px;
  padding-left: 10px;
  padding-top: 15px;
  display: none;/* Hide when sidebar shows */
  position: fixed;
  top: 530px;
}

/* Hide Sidebar */
.nav-hide {
  font-family: inherit;
  color: var(--main-theme-color);
  display: flex;
  align-items: center; 
  justify-content: center; 
  width: 276px;
  height: 48px;
  background: var(--background-offwhite-color);
  border-top-right-radius: 100px;
  border-bottom-right-radius: 100px;
  margin-bottom: 15px;
  cursor: pointer;
}









/* =========== Main Layout =========== */
.main-layout-container {
  flex: 1; /*Allows main-layout to fill remain space of body*/
  overflow-x: hidden; /*Prevent horizontal scroll*/
}


/* =========== Header Section =========== */
.launch-header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0 35px 0 30px;
  background-color: var(--background-white-color);
  height: 97px;
  border-bottom: 1px solid var(--border-grey-color);
}

.launch-header-div {
  display: flex;
  align-items: center;
}

.favicon-mobile {
  width: 30px;
  height: 30px;
  margin-right: 10px; /*Space between favicon and launch title*/
  display: none; /*Favicon hidden on desktop screens*/
}


/* =========== Card grid =========== */
.loader {
  display: none; /* Hidden by default */
  position: fixed;
  top: 50%;
  left: 52%; 
  font-size: 1.2rem;
  font-weight: bold;
  z-index: 1000;
}

.loader::after {
  content: "";
  display: block;
  margin: 5px auto;
  width: 24px;
  height: 24px;
  border: 4px solid #ccc;
  border-top-color: #333;
  border-radius: 50%;
  animation: spin 1s linear infinite;
}
 @keyframes spin {
  to { transform: rotate(360deg); 
  }
}

.main-tasks-container {
  display: flex;
  flex-direction: column; 
  padding-left: 35px;
  padding-right: 20px;
}

.tasks-grid {
  display: grid;
  grid-template-columns: repeat(3, minmax(0, 304px)); /*3 columns with max size*/
  gap: 20px; /*Space between columns*/
}

.column-div {
  display: flex;
  flex-direction: column;
  flex: 1; 
  gap: 20px; /*gap between todo, doing, done status and top cards*/
}


/* =========== TODO, Doing, Done status =========== */
.todo-status,
.doing-status,
.done-status {
  display: flex;
  width: 120px;
  justify-content: space-between;
  margin-top: 20px;
}

.todo-title,
.doing-title,
.done-title {
  width: 90px;
  margin: 0 auto;
}

.todo-dot,
.doing-dot,
.done-dot {
  border-radius: 50%;
  width: 15px;
  height: 15px;
  margin: auto;
}

.todo-dot {
  background-color: var(--todo-dot-color);
}

.doing-dot {
  background-color: var(--doing-dot-color);
}

.done-dot {
  background-color: var(--done-dot-color);
}
/* ... */

